Updated dataset reader and a slight modification to types